--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
 # Environment variables
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 # Python
 __pycache__/
@@ -11,27 +7,23 @@ __pycache__/
 *$py.class
 *.so
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# Virtual environments
-.venv/
-venv/
 env/
+venv/
+.venv/
+pip-log.txt
+pip-delete-this-directory.txt
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.log
+.git/modules/
+
+# Virtual Environment
+.venv/
 
 # IDE
 .vscode/
@@ -47,5 +39,6 @@ Thumbs.db
 *.db
 *.db-journal
 
-# Logs
-*.log
+# FastAPI
+*.db
+*.db-journal
