--- a/Phase_2/requirements.txt
+++ b/Phase_2/requirements.txt
@@ -6,3 +6,15 @@ python-multipart==0.0.20
 
 # AI dependencies
 huggingface-hub==0.26.2
+langchain==0.3.4
+langchain-community==0.3.3
+langchain-huggingface==0.1.2
+langchain-qdrant==0.1.4
+langsmith==0.1.112
+
+# Vector database
+qdrant-client==1.12.0
+
+# Additional dependencies
+requests==2.32.3
+numpy==1.24.4
