--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,15 @@
-fastapi==0.115.0
-uvicorn==0.32.0
-sqlalchemy==2.0.35
-python-dotenv==1.0.1
-python-multipart==0.0.20
-
-# AI dependencies
-huggingface-hub==0.26.2
-langchain==0.3.4
-langchain-community==0.3.3
-langchain-huggingface==0.1.2
-langchain-qdrant==0.1.4
-langsmith==0.1.112
-
-# Vector database
-qdrant-client==1.12.0
-
-# Additional dependencies
-requests==2.32.3
-numpy==1.24.4
+fastapi
+uvicorn
+sqlalchemy
+python-dotenv
+python-multipart
+huggingface-hub
+langchain
+langchain-community
+langchain-huggingface
+langchain-qdrant
+langsmith
+qdrant-client
+requests
+numpy>=1.26.0
+setuptools
