--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,6 @@
-# API Keys Configuration
-OPENAI_API_KEY=your_openai_api_key_here
-# ANTHROPIC_API_KEY=your_anthropic_api_key_here  # For Claude if using
+# Hugging Face API Token
+# Get your token from https://huggingface.co/settings/tokens
+HUGGINGFACEHUB_API_TOKEN=your_huggingface_token_here
 
-# Model Configuration
-USE_LOCAL_MODEL=false
-# LOCAL_MODEL_PATH=/path/to/your/local/model
-
-# Vector Database (Qdrant) - if using
-# QDRANT_URL=your_qdrant_url
-# QDRANT_API_KEY=your_qdrant_api_key
+# Optional: Specify the model to use (default is gpt2)
+HF_MODEL_NAME=gpt2
