--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,6 @@ langsmith==0.1.112
 qdrant-client==1.12.0
 huggingface-hub==0.26.2
 openai==1.54.0
+
+# Additional dependencies for AI features
+requests==2.32.3
