--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,8 @@
-numpy>=2.1.0
+numpy
 fastapi
 uvicorn[standard]
 sqlalchemy
 python-dotenv
 python-multipart
-
-langchain
-langchain-community
-langchain-huggingface
-langchain-qdrant
-langsmith
-
-qdrant-client
 huggingface-hub
-openai
-
-# Additional dependencies for AI features
 requests
